--- a/src/App.css
+++ b/src/App.css
@@ -689,6 +689,9 @@ video {
 .col-start-2 {
 	grid-column-start: 2;
 }
+.row-span-4 {
+	grid-row: span 4 / span 4;
+}
 .row-span-2 {
 	grid-row: span 2 / span 2;
 }
@@ -732,6 +735,21 @@ video {
 .mb-8 {
 	margin-bottom: 2rem;
 }
+.mb-20 {
+	margin-bottom: 5rem;
+}
+.mb-4 {
+	margin-bottom: 1rem;
+}
+.ml-4 {
+	margin-left: 1rem;
+}
+.mr-3 {
+	margin-right: 0.75rem;
+}
+.mr-4 {
+	margin-right: 1rem;
+}
 .mt-60 {
 	margin-top: 15rem;
 }
@@ -741,23 +759,11 @@ video {
 .mb-2 {
 	margin-bottom: 0.5rem;
 }
-.mb-4 {
-	margin-bottom: 1rem;
-}
 .ml-6 {
 	margin-left: 1.5rem;
 }
 .mb-6 {
 	margin-bottom: 1.5rem;
-}
-.mr-4 {
-	margin-right: 1rem;
-}
-.mb-20 {
-	margin-bottom: 5rem;
-}
-.mr-3 {
-	margin-right: 0.75rem;
 }
 .mr-6 {
 	margin-right: 1.5rem;
@@ -795,8 +801,20 @@ video {
 .w-full {
 	width: 100%;
 }
+.w-2\/3 {
+	width: 66.666667%;
+}
 .w-11\/12 {
 	width: 91.666667%;
+}
+.w-12 {
+	width: 3rem;
+}
+.w-16 {
+	width: 4rem;
+}
+.w-20 {
+	width: 5rem;
 }
 .w-40 {
 	width: 10rem;
@@ -883,6 +901,9 @@ video {
 .rounded-lg {
 	border-radius: 0.5rem;
 }
+.border-4 {
+	border-width: 4px;
+}
 .border {
 	border-width: 1px;
 }
@@ -900,6 +921,14 @@ video {
 .bg-gray-700 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
+}
+.bg-gray-600 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
+}
+.bg-gray-400 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
 }
 .bg-black {
 	--tw-bg-opacity: 1;
@@ -924,10 +953,6 @@ video {
 .bg-yellow-500 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(245, 158, 11, var(--tw-bg-opacity));
-}
-.bg-gray-600 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
 }
 .bg-gray-200 {
 	--tw-bg-opacity: 1;
@@ -967,11 +992,15 @@ video {
 .object-center {
 	object-position: center;
 }
+.p-4 {
+	padding: 1rem;
+}
 .p-2 {
 	padding: 0.5rem;
 }
-.p-4 {
-	padding: 1rem;
+.py-10 {
+	padding-top: 2.5rem;
+	padding-bottom: 2.5rem;
 }
 .px-6 {
 	padding-left: 1.5rem;
@@ -1004,6 +1033,9 @@ video {
 .pt-20 {
 	padding-top: 5rem;
 }
+.pb-2 {
+	padding-bottom: 0.5rem;
+}
 .pt-16 {
 	padding-top: 4rem;
 }
@@ -1012,9 +1044,6 @@ video {
 }
 .pt-10 {
 	padding-top: 2.5rem;
-}
-.pb-2 {
-	padding-bottom: 0.5rem;
 }
 .text-center {
 	text-align: center;
@@ -1074,6 +1103,10 @@ video {
 .text-gray-200 {
 	--tw-text-opacity: 1;
 	color: rgba(229, 231, 235, var(--tw-text-opacity));
+}
+.text-gray-100 {
+	--tw-text-opacity: 1;
+	color: rgba(243, 244, 246, var(--tw-text-opacity));
 }
 .text-green-500 {
 	--tw-text-opacity: 1;
@@ -1185,12 +1218,12 @@ video {
 		margin-bottom: 0px;
 	}
 
-	.md\:ml-12 {
-		margin-left: 3rem;
-	}
-
 	.md\:mb-20 {
 		margin-bottom: 5rem;
+	}
+
+	.md\:ml-12 {
+		margin-left: 3rem;
 	}
 
 	.md\:block {
@@ -1203,6 +1236,10 @@ video {
 
 	.md\:hidden {
 		display: none;
+	}
+
+	.md\:w-3\/4 {
+		width: 75%;
 	}
 
 	.md\:w-1\/2 {
@@ -1219,6 +1256,10 @@ video {
 
 	.md\:grid-cols-3 {
 		grid-template-columns: repeat(3, minmax(0, 1fr));
+	}
+
+	.md\:gap-6 {
+		gap: 1.5rem;
 	}
 
 	.md\:gap-4 {
@@ -1263,6 +1304,10 @@ video {
 		grid-column-start: 4;
 	}
 
+	.lg\:ml-12 {
+		margin-left: 3rem;
+	}
+
 	.lg\:ml-20 {
 		margin-left: 5rem;
 	}
@@ -1283,6 +1328,14 @@ video {
 		display: none;
 	}
 
+	.lg\:w-1\/2 {
+		width: 50%;
+	}
+
+	.lg\:grid-cols-2 {
+		grid-template-columns: repeat(2, minmax(0, 1fr));
+	}
+
 	.lg\:grid-cols-6 {
 		grid-template-columns: repeat(6, minmax(0, 1fr));
 	}
@@ -1299,6 +1352,11 @@ video {
 	.lg\:py-3 {
 		padding-top: 0.75rem;
 		padding-bottom: 0.75rem;
+	}
+
+	.lg\:text-5xl {
+		font-size: 3rem;
+		line-height: 1;
 	}
 
 	.lg\:text-6xl {
