--- a/src/App.css
+++ b/src/App.css
@@ -753,6 +753,9 @@ video {
 .mr-4 {
 	margin-right: 1rem;
 }
+.mb-3 {
+	margin-bottom: 0.75rem;
+}
 .mt-60 {
 	margin-top: 15rem;
 }
@@ -792,11 +795,11 @@ video {
 .h-full {
 	height: 100%;
 }
+.h-48 {
+	height: 12rem;
+}
 .h-screen {
 	height: 100vh;
-}
-.min-h-70v {
-	min-height: 70vh;
 }
 .min-h-85v {
 	min-height: 85vh;
@@ -818,6 +821,9 @@ video {
 }
 .w-20 {
 	width: 5rem;
+}
+.w-5\/6 {
+	width: 83.333333%;
 }
 .w-40 {
 	width: 10rem;
@@ -880,6 +886,9 @@ video {
 .grid-rows-4 {
 	grid-template-rows: repeat(4, minmax(0, 1fr));
 }
+.flex-col {
+	flex-direction: column;
+}
 .flex-wrap {
 	flex-wrap: wrap;
 }
@@ -906,6 +915,9 @@ video {
 }
 .rounded-lg {
 	border-radius: 0.5rem;
+}
+.rounded-md {
+	border-radius: 0.375rem;
 }
 .border-4 {
 	border-width: 4px;
@@ -940,17 +952,20 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
 }
-.bg-green-500 {
+.bg-gray-900 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
+	background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
+}
+.bg-transparent {
+	background-color: transparent;
+}
+.bg-\[\#00feda\] {
+	--tw-bg-opacity: 1;
+	background-color: rgba(0, 254, 218, var(--tw-bg-opacity));
 }
 .bg-pink-500 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(236, 72, 153, var(--tw-bg-opacity));
-}
-.bg-white {
-	--tw-bg-opacity: 1;
-	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
 .bg-yellow-500 {
 	--tw-bg-opacity: 1;
@@ -964,15 +979,11 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
-.bg-gray-900 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
+.bg-opacity-80 {
+	--tw-bg-opacity: 0.8;
 }
 .bg-opacity-90 {
 	--tw-bg-opacity: 0.9;
-}
-.bg-opacity-80 {
-	--tw-bg-opacity: 0.8;
 }
 .bg-opacity-70 {
 	--tw-bg-opacity: 0.7;
@@ -1004,6 +1015,9 @@ video {
 .p-4 {
 	padding: 1rem;
 }
+.p-6 {
+	padding: 1.5rem;
+}
 .p-2 {
 	padding: 0.5rem;
 }
@@ -1015,13 +1029,21 @@ video {
 	padding-top: 3rem;
 	padding-bottom: 3rem;
 }
-.px-6 {
-	padding-left: 1.5rem;
-	padding-right: 1.5rem;
+.px-4 {
+	padding-left: 1rem;
+	padding-right: 1rem;
 }
 .py-2 {
 	padding-top: 0.5rem;
 	padding-bottom: 0.5rem;
+}
+.py-8 {
+	padding-top: 2rem;
+	padding-bottom: 2rem;
+}
+.px-6 {
+	padding-left: 1.5rem;
+	padding-right: 1.5rem;
 }
 .px-2 {
 	padding-left: 0.5rem;
@@ -1038,10 +1060,6 @@ video {
 .py-20 {
 	padding-top: 5rem;
 	padding-bottom: 5rem;
-}
-.px-4 {
-	padding-left: 1rem;
-	padding-right: 1rem;
 }
 .pt-20 {
 	padding-top: 5rem;
@@ -1060,6 +1078,9 @@ video {
 }
 .text-center {
 	text-align: center;
+}
+.text-right {
+	text-align: right;
 }
 .text-justify {
 	text-align: justify;
@@ -1125,9 +1146,13 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(55, 65, 81, var(--tw-text-opacity));
 }
-.text-green-500 {
+.text-yellow-600 {
 	--tw-text-opacity: 1;
-	color: rgba(16, 185, 129, var(--tw-text-opacity));
+	color: rgba(217, 119, 6, var(--tw-text-opacity));
+}
+.text-\[\#00feda\] {
+	--tw-text-opacity: 1;
+	color: rgba(0, 254, 218, var(--tw-text-opacity));
 }
 .text-pink-600 {
 	--tw-text-opacity: 1;
@@ -1147,9 +1172,17 @@ video {
 	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.shadow {
+	--tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 .shadow-md {
 	--tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.outline-none {
+	outline: 2px solid transparent;
+	outline-offset: 2px;
 }
 .filter {
 	filter: var(--tw-filter);
@@ -1205,9 +1238,9 @@ video {
 	--tw-bg-opacity: 0.8;
 }
 
-.hover\:text-green-400:hover {
+.hover\:text-\[\#00feda\]:hover {
 	--tw-text-opacity: 1;
-	color: rgba(52, 211, 153, var(--tw-text-opacity));
+	color: rgba(0, 254, 218, var(--tw-text-opacity));
 }
 
 @media (min-width: 768px) {
@@ -1344,8 +1377,16 @@ video {
 		display: none;
 	}
 
+	.lg\:h-64 {
+		height: 16rem;
+	}
+
 	.lg\:w-1\/2 {
 		width: 50%;
+	}
+
+	.lg\:w-5\/6 {
+		width: 83.333333%;
 	}
 
 	.lg\:grid-cols-2 {
