--- a/src/App.css
+++ b/src/App.css
@@ -555,14 +555,6 @@ video {
 }
 
 *, ::before, ::after {
-	--tw-translate-x: 0;
-	--tw-translate-y: 0;
-	--tw-rotate: 0;
-	--tw-skew-x: 0;
-	--tw-skew-y: 0;
-	--tw-scale-x: 1;
-	--tw-scale-y: 1;
-	--tw-transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 	--tw-border-opacity: 1;
 	border-color: rgba(229, 231, 235, var(--tw-border-opacity));
 	--tw-ring-offset-shadow: 0 0 #0000;
@@ -680,29 +672,8 @@ video {
 .col-span-1 {
 	grid-column: span 1 / span 1;
 }
-.col-span-2 {
-	grid-column: span 2 / span 2;
-}
-.col-start-4 {
-	grid-column-start: 4;
-}
-.col-start-2 {
-	grid-column-start: 2;
-}
 .row-span-4 {
 	grid-row: span 4 / span 4;
-}
-.row-span-2 {
-	grid-row: span 2 / span 2;
-}
-.row-start-2 {
-	grid-row-start: 2;
-}
-.row-start-3 {
-	grid-row-start: 3;
-}
-.row-start-4 {
-	grid-row-start: 4;
 }
 .mx-auto {
 	margin-left: auto;
@@ -735,11 +706,14 @@ video {
 .mb-8 {
 	margin-bottom: 2rem;
 }
+.mb-2 {
+	margin-bottom: 0.5rem;
+}
 .mr-6 {
 	margin-right: 1.5rem;
 }
-.mb-20 {
-	margin-bottom: 5rem;
+.mb-12 {
+	margin-bottom: 3rem;
 }
 .mb-4 {
 	margin-bottom: 1rem;
@@ -762,14 +736,17 @@ video {
 .ml-8 {
 	margin-left: 2rem;
 }
-.mb-2 {
-	margin-bottom: 0.5rem;
-}
 .ml-6 {
 	margin-left: 1.5rem;
 }
 .mb-6 {
 	margin-bottom: 1.5rem;
+}
+.mb-20 {
+	margin-bottom: 5rem;
+}
+.ml-3 {
+	margin-left: 0.75rem;
 }
 .mt-2 {
 	margin-top: 0.5rem;
@@ -837,13 +814,6 @@ video {
 .w-screen {
 	width: 100vw;
 }
-.-skew-y-12 {
-	--tw-skew-y: -12deg;
-	transform: var(--tw-transform);
-}
-.transform {
-	transform: var(--tw-transform);
-}
 @keyframes bounce {
 
 	0%, 100% {
@@ -859,15 +829,6 @@ video {
 .animate-bounce {
 	animation: bounce 1s infinite;
 }
-@keyframes pulse {
-
-	50% {
-		opacity: .5;
-	}
-}
-.animate-pulse {
-	animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-}
 .cursor-pointer {
 	cursor: pointer;
 }
@@ -882,12 +843,6 @@ video {
 }
 .grid-cols-5 {
 	grid-template-columns: repeat(5, minmax(0, 1fr));
-}
-.grid-cols-4 {
-	grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-.grid-rows-4 {
-	grid-template-rows: repeat(4, minmax(0, 1fr));
 }
 .flex-col {
 	flex-direction: column;
@@ -912,6 +867,9 @@ video {
 }
 .overflow-hidden {
 	overflow: hidden;
+}
+.whitespace-pre-line {
+	white-space: pre-line;
 }
 .rounded-full {
 	border-radius: 9999px;
@@ -1171,9 +1129,6 @@ video {
 .opacity-80 {
 	opacity: 0.8;
 }
-.opacity-90 {
-	opacity: 0.9;
-}
 .shadow-lg {
 	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
@@ -1336,18 +1291,6 @@ video {
 
 @media (min-width: 1024px) {
 
-	.lg\:col-start-3 {
-		grid-column-start: 3;
-	}
-
-	.lg\:col-start-6 {
-		grid-column-start: 6;
-	}
-
-	.lg\:col-start-4 {
-		grid-column-start: 4;
-	}
-
 	.lg\:ml-12 {
 		margin-left: 3rem;
 	}
@@ -1362,10 +1305,6 @@ video {
 
 	.lg\:ml-4 {
 		margin-left: 1rem;
-	}
-
-	.lg\:block {
-		display: block;
 	}
 
 	.lg\:hidden {
@@ -1390,10 +1329,6 @@ video {
 
 	.lg\:grid-cols-2 {
 		grid-template-columns: repeat(2, minmax(0, 1fr));
-	}
-
-	.lg\:grid-cols-6 {
-		grid-template-columns: repeat(6, minmax(0, 1fr));
 	}
 
 	.lg\:justify-start {
