--- a/src/App.css
+++ b/src/App.css
@@ -555,6 +555,14 @@ video {
 }
 
 *, ::before, ::after {
+	--tw-translate-x: 0;
+	--tw-translate-y: 0;
+	--tw-rotate: 0;
+	--tw-skew-x: 0;
+	--tw-skew-y: 0;
+	--tw-scale-x: 1;
+	--tw-scale-y: 1;
+	--tw-transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 	--tw-border-opacity: 1;
 	border-color: rgba(229, 231, 235, var(--tw-border-opacity));
 	--tw-ring-offset-shadow: 0 0 #0000;
@@ -645,20 +653,14 @@ video {
 	left: 0px;
 	right: 0px;
 }
-.top-auto {
-	top: auto;
+.top-0 {
+	top: 0px;
 }
 .bottom-0 {
 	bottom: 0px;
 }
-.left-0 {
-	left: 0px;
-}
 .right-0 {
 	right: 0px;
-}
-.top-0 {
-	top: 0px;
 }
 .z-10 {
 	z-index: 10;
@@ -666,14 +668,38 @@ video {
 .z-50 {
 	z-index: 50;
 }
+.col-span-2 {
+	grid-column: span 2 / span 2;
+}
 .col-span-4 {
 	grid-column: span 4 / span 4;
 }
 .col-span-1 {
 	grid-column: span 1 / span 1;
 }
+.col-start-4 {
+	grid-column-start: 4;
+}
+.col-start-2 {
+	grid-column-start: 2;
+}
 .row-span-4 {
 	grid-row: span 4 / span 4;
+}
+.row-span-2 {
+	grid-row: span 2 / span 2;
+}
+.row-span-3 {
+	grid-row: span 3 / span 3;
+}
+.row-start-2 {
+	grid-row-start: 2;
+}
+.row-start-3 {
+	grid-row-start: 3;
+}
+.row-start-4 {
+	grid-row-start: 4;
 }
 .mx-auto {
 	margin-left: auto;
@@ -682,6 +708,10 @@ video {
 .my-4 {
 	margin-top: 1rem;
 	margin-bottom: 1rem;
+}
+.mx-2 {
+	margin-left: 0.5rem;
+	margin-right: 0.5rem;
 }
 .mx-3 {
 	margin-left: 0.75rem;
@@ -699,10 +729,6 @@ video {
 	margin-left: 1.5rem;
 	margin-right: 1.5rem;
 }
-.mx-2 {
-	margin-left: 0.5rem;
-	margin-right: 0.5rem;
-}
 .mb-8 {
 	margin-bottom: 2rem;
 }
@@ -717,12 +743,6 @@ video {
 }
 .mb-4 {
 	margin-bottom: 1rem;
-}
-.ml-4 {
-	margin-left: 1rem;
-}
-.mr-3 {
-	margin-right: 0.75rem;
 }
 .mr-4 {
 	margin-right: 1rem;
@@ -745,6 +765,9 @@ video {
 .mb-20 {
 	margin-bottom: 5rem;
 }
+.mr-3 {
+	margin-right: 0.75rem;
+}
 .ml-3 {
 	margin-left: 0.75rem;
 }
@@ -757,9 +780,6 @@ video {
 .inline-block {
 	display: inline-block;
 }
-.inline {
-	display: inline;
-}
 .flex {
 	display: flex;
 }
@@ -769,11 +789,14 @@ video {
 .hidden {
 	display: none;
 }
+.h-48 {
+	height: 12rem;
+}
 .h-full {
 	height: 100%;
 }
-.h-48 {
-	height: 12rem;
+.h-52 {
+	height: 13rem;
 }
 .h-screen {
 	height: 100vh;
@@ -805,14 +828,25 @@ video {
 .w-5\/6 {
 	width: 83.333333%;
 }
-.w-40 {
-	width: 10rem;
-}
 .w-1\/2 {
 	width: 50%;
 }
+.w-40 {
+	width: 10rem;
+}
 .w-screen {
 	width: 100vw;
+}
+.-rotate-45 {
+	--tw-rotate: -45deg;
+	transform: var(--tw-transform);
+}
+.-skew-y-12 {
+	--tw-skew-y: -12deg;
+	transform: var(--tw-transform);
+}
+.transform {
+	transform: var(--tw-transform);
 }
 @keyframes bounce {
 
@@ -835,14 +869,17 @@ video {
 .cursor-default {
 	cursor: default;
 }
-.resize {
-	resize: both;
-}
 .grid-flow-row {
 	grid-auto-flow: row;
 }
+.grid-cols-4 {
+	grid-template-columns: repeat(4, minmax(0, 1fr));
+}
 .grid-cols-5 {
 	grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+.grid-rows-4 {
+	grid-template-rows: repeat(4, minmax(0, 1fr));
 }
 .flex-col {
 	flex-direction: column;
@@ -850,14 +887,17 @@ video {
 .flex-wrap {
 	flex-wrap: wrap;
 }
-.content-center {
-	align-content: center;
-}
 .items-center {
 	align-items: center;
 }
+.items-stretch {
+	align-items: stretch;
+}
 .justify-center {
 	justify-content: center;
+}
+.gap-3 {
+	gap: 0.75rem;
 }
 .gap-1 {
 	gap: 0.25rem;
@@ -900,25 +940,21 @@ video {
 	--tw-border-opacity: 1;
 	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
 }
-.bg-gray-800 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
+.border-\[\#00feda\] {
+	--tw-border-opacity: 1;
+	border-color: rgba(0, 254, 218, var(--tw-border-opacity));
 }
-.bg-gray-700 {
+.bg-gray-900 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
+	background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
 }
 .bg-gray-400 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
 }
-.bg-black {
+.bg-gray-800 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
-}
-.bg-gray-900 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
+	background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
 }
 .bg-transparent {
 	background-color: transparent;
@@ -927,17 +963,9 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(0, 254, 218, var(--tw-bg-opacity));
 }
-.bg-pink-500 {
+.bg-black {
 	--tw-bg-opacity: 1;
-	background-color: rgba(236, 72, 153, var(--tw-bg-opacity));
-}
-.bg-yellow-500 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(245, 158, 11, var(--tw-bg-opacity));
-}
-.bg-gray-600 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
+	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
 }
 .bg-gray-200 {
 	--tw-bg-opacity: 1;
@@ -949,20 +977,30 @@ video {
 .bg-opacity-70 {
 	--tw-bg-opacity: 0.7;
 }
-.bg-cover {
-	background-size: cover;
+.bg-gradient-to-br {
+	background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
 }
-.bg-fixed {
-	background-attachment: fixed;
+.bg-gradient-to-bl {
+	background-image: linear-gradient(to bottom left, var(--tw-gradient-stops));
 }
-.bg-top {
-	background-position: top;
+.bg-gradient-to-tr {
+	background-image: linear-gradient(to top right, var(--tw-gradient-stops));
 }
-.bg-bottom {
-	background-position: bottom;
+.bg-gradient-to-tl {
+	background-image: linear-gradient(to top left, var(--tw-gradient-stops));
 }
-.fill-current {
-	fill: currentColor;
+.from-gray-900 {
+	--tw-gradient-from: #111827;
+	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(17, 24, 39, 0));
+}
+.via-gray-800 {
+	--tw-gradient-stops: var(--tw-gradient-from), #1f2937, var(--tw-gradient-to, rgba(31, 41, 55, 0));
+}
+.to-gray-900 {
+	--tw-gradient-to: #111827;
+}
+.stroke-current {
+	stroke: currentColor;
 }
 .object-cover {
 	object-fit: cover;
@@ -982,13 +1020,9 @@ video {
 .p-2 {
 	padding: 0.5rem;
 }
-.py-10 {
-	padding-top: 2.5rem;
-	padding-bottom: 2.5rem;
-}
-.py-12 {
-	padding-top: 3rem;
-	padding-bottom: 3rem;
+.py-8 {
+	padding-top: 2rem;
+	padding-bottom: 2rem;
 }
 .px-4 {
 	padding-left: 1rem;
@@ -998,9 +1032,9 @@ video {
 	padding-top: 0.5rem;
 	padding-bottom: 0.5rem;
 }
-.py-8 {
-	padding-top: 2rem;
-	padding-bottom: 2rem;
+.py-6 {
+	padding-top: 1.5rem;
+	padding-bottom: 1.5rem;
 }
 .px-6 {
 	padding-left: 1.5rem;
@@ -1018,12 +1052,26 @@ video {
 	padding-left: 0.75rem;
 	padding-right: 0.75rem;
 }
+.py-1 {
+	padding-top: 0.25rem;
+	padding-bottom: 0.25rem;
+}
+.py-3 {
+	padding-top: 0.75rem;
+	padding-bottom: 0.75rem;
+}
 .py-20 {
 	padding-top: 5rem;
 	padding-bottom: 5rem;
 }
 .pt-20 {
 	padding-top: 5rem;
+}
+.pt-6 {
+	padding-top: 1.5rem;
+}
+.pb-10 {
+	padding-bottom: 2.5rem;
 }
 .pb-2 {
 	padding-bottom: 0.5rem;
@@ -1062,6 +1110,10 @@ video {
 	font-size: 2.25rem;
 	line-height: 2.5rem;
 }
+.text-xl {
+	font-size: 1.25rem;
+	line-height: 1.75rem;
+}
 .text-lg {
 	font-size: 1.125rem;
 	line-height: 1.75rem;
@@ -1069,10 +1121,6 @@ video {
 .text-2xl {
 	font-size: 1.5rem;
 	line-height: 2rem;
-}
-.text-xl {
-	font-size: 1.25rem;
-	line-height: 1.75rem;
 }
 .text-3xl {
 	font-size: 1.875rem;
@@ -1082,11 +1130,15 @@ video {
 	font-size: 6rem;
 	line-height: 1;
 }
-.font-bold {
-	font-weight: 700;
+.text-base {
+	font-size: 1rem;
+	line-height: 1.5rem;
 }
 .font-semibold {
 	font-weight: 600;
+}
+.font-bold {
+	font-weight: 700;
 }
 .leading-normal {
 	line-height: 1.5;
@@ -1098,36 +1150,32 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
-.text-gray-200 {
+.text-\[\#00ffff\] {
 	--tw-text-opacity: 1;
-	color: rgba(229, 231, 235, var(--tw-text-opacity));
+	color: rgba(0, 255, 255, var(--tw-text-opacity));
 }
 .text-gray-100 {
 	--tw-text-opacity: 1;
 	color: rgba(243, 244, 246, var(--tw-text-opacity));
 }
-.text-gray-700 {
-	--tw-text-opacity: 1;
-	color: rgba(55, 65, 81, var(--tw-text-opacity));
-}
 .text-yellow-600 {
 	--tw-text-opacity: 1;
 	color: rgba(217, 119, 6, var(--tw-text-opacity));
 }
-.text-\[\#00feda\] {
+.text-gray-200 {
 	--tw-text-opacity: 1;
-	color: rgba(0, 254, 218, var(--tw-text-opacity));
+	color: rgba(229, 231, 235, var(--tw-text-opacity));
 }
-.text-pink-600 {
+.text-black {
 	--tw-text-opacity: 1;
-	color: rgba(219, 39, 119, var(--tw-text-opacity));
+	color: rgba(0, 0, 0, var(--tw-text-opacity));
 }
 .text-gray-300 {
 	--tw-text-opacity: 1;
 	color: rgba(209, 213, 219, var(--tw-text-opacity));
 }
-.opacity-80 {
-	opacity: 0.8;
+.opacity-75 {
+	opacity: 0.75;
 }
 .shadow-lg {
 	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
@@ -1161,18 +1209,11 @@ video {
 .ease-in {
 	transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
+.text-shadow-xl {
+	text-shadow: 1px 1px 3px rgb(0 0 0 / 29%), 2px 4px 7px rgb(73 64 125 / 35%);
+}
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Montserrat:wght@400;600;700&display=swap');
-
-.hover\:border-green-500:hover {
-	--tw-border-opacity: 1;
-	border-color: rgba(16, 185, 129, var(--tw-border-opacity));
-}
-
-.hover\:border-pink-500:hover {
-	--tw-border-opacity: 1;
-	border-color: rgba(236, 72, 153, var(--tw-border-opacity));
-}
 
 .hover\:border-\[\#00feda\]:hover {
 	--tw-border-opacity: 1;
@@ -1182,10 +1223,6 @@ video {
 .hover\:bg-gray-800:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
-}
-
-.hover\:bg-opacity-80:hover {
-	--tw-bg-opacity: 0.8;
 }
 
 .hover\:text-\[\#00feda\]:hover {
@@ -1203,18 +1240,9 @@ video {
 		top: 0px;
 	}
 
-	.md\:col-span-2 {
-		grid-column: span 2 / span 2;
-	}
-
 	.md\:mx-0 {
 		margin-left: 0px;
 		margin-right: 0px;
-	}
-
-	.md\:my-0 {
-		margin-top: 0px;
-		margin-bottom: 0px;
 	}
 
 	.md\:mb-20 {
@@ -1223,6 +1251,10 @@ video {
 
 	.md\:ml-12 {
 		margin-left: 3rem;
+	}
+
+	.md\:mb-4 {
+		margin-bottom: 1rem;
 	}
 
 	.md\:block {
@@ -1241,20 +1273,16 @@ video {
 		width: 75%;
 	}
 
-	.md\:w-1\/2 {
-		width: 50%;
+	.md\:w-2\/5 {
+		width: 40%;
 	}
 
 	.md\:w-full {
 		width: 100%;
 	}
 
-	.md\:grid-cols-4 {
-		grid-template-columns: repeat(4, minmax(0, 1fr));
-	}
-
-	.md\:grid-cols-3 {
-		grid-template-columns: repeat(3, minmax(0, 1fr));
+	.md\:grid-cols-2 {
+		grid-template-columns: repeat(2, minmax(0, 1fr));
 	}
 
 	.md\:gap-6 {
@@ -1269,9 +1297,8 @@ video {
 		padding: 1rem;
 	}
 
-	.md\:px-4 {
-		padding-left: 1rem;
-		padding-right: 1rem;
+	.md\:pt-4 {
+		padding-top: 1rem;
 	}
 
 	.md\:text-left {
@@ -1282,25 +1309,42 @@ video {
 		font-size: 3rem;
 		line-height: 1;
 	}
-
-	.md\:text-6xl {
-		font-size: 3.75rem;
-		line-height: 1;
-	}
 }
 
 @media (min-width: 1024px) {
+
+	.lg\:top-\[10\%\] {
+		top: 10%;
+	}
+
+	.lg\:right-\[10\%\] {
+		right: 10%;
+	}
+
+	.lg\:col-span-2 {
+		grid-column: span 2 / span 2;
+	}
+
+	.lg\:my-0 {
+		margin-top: 0px;
+		margin-bottom: 0px;
+	}
+
+	.lg\:mx-0 {
+		margin-left: 0px;
+		margin-right: 0px;
+	}
 
 	.lg\:ml-12 {
 		margin-left: 3rem;
 	}
 
-	.lg\:ml-20 {
-		margin-left: 5rem;
-	}
-
 	.lg\:mb-6 {
 		margin-bottom: 1.5rem;
+	}
+
+	.lg\:ml-20 {
+		margin-left: 5rem;
 	}
 
 	.lg\:ml-4 {
@@ -1315,8 +1359,12 @@ video {
 		height: 16rem;
 	}
 
-	.lg\:w-1\/2 {
-		width: 50%;
+	.lg\:h-1\/2 {
+		height: 50%;
+	}
+
+	.lg\:w-2\/5 {
+		width: 40%;
 	}
 
 	.lg\:w-5\/6 {
@@ -1331,8 +1379,16 @@ video {
 		grid-template-columns: repeat(2, minmax(0, 1fr));
 	}
 
+	.lg\:grid-cols-3 {
+		grid-template-columns: repeat(3, minmax(0, 1fr));
+	}
+
 	.lg\:justify-start {
 		justify-content: flex-start;
+	}
+
+	.lg\:gap-4 {
+		gap: 1rem;
 	}
 
 	.lg\:px-8 {
@@ -1343,6 +1399,11 @@ video {
 	.lg\:py-3 {
 		padding-top: 0.75rem;
 		padding-bottom: 0.75rem;
+	}
+
+	.lg\:px-4 {
+		padding-left: 1rem;
+		padding-right: 1rem;
 	}
 
 	.lg\:text-5xl {
@@ -1360,7 +1421,49 @@ video {
 		line-height: 2rem;
 	}
 
+	.lg\:text-sm {
+		font-size: 0.875rem;
+		line-height: 1.25rem;
+	}
+
 	.lg\:tracking-wider {
 		letter-spacing: 0.05em;
+	}
+}
+
+@media (min-width: 1280px) {
+
+	.xl\:mb-16 {
+		margin-bottom: 4rem;
+	}
+
+	.xl\:grid-cols-4 {
+		grid-template-columns: repeat(4, minmax(0, 1fr));
+	}
+}
+
+@media (min-width: 1536px) {
+
+	.\32xl\:mb-8 {
+		margin-bottom: 2rem;
+	}
+
+	.\32xl\:px-3 {
+		padding-left: 0.75rem;
+		padding-right: 0.75rem;
+	}
+
+	.\32xl\:py-2 {
+		padding-top: 0.5rem;
+		padding-bottom: 0.5rem;
+	}
+
+	.\32xl\:pt-10 {
+		padding-top: 2.5rem;
+	}
+
+	.\32xl\:text-base {
+		font-size: 1rem;
+		line-height: 1.5rem;
 	}
 }
