--- a/src/App.css
+++ b/src/App.css
@@ -668,6 +668,12 @@ video {
 .z-50 {
 	z-index: 50;
 }
+.order-2 {
+	order: 2;
+}
+.order-1 {
+	order: 1;
+}
 .col-span-2 {
 	grid-column: span 2 / span 2;
 }
@@ -939,21 +945,17 @@ video {
 	--tw-border-opacity: 1;
 	border-color: rgba(255, 255, 255, var(--tw-border-opacity));
 }
-.border-gray-400 {
-	--tw-border-opacity: 1;
-	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
-}
 .border-\[\#00feda\] {
 	--tw-border-opacity: 1;
 	border-color: rgba(0, 254, 218, var(--tw-border-opacity));
 }
+.border-gray-400 {
+	--tw-border-opacity: 1;
+	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
+}
 .bg-gray-900 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
-}
-.bg-gray-400 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
 }
 .bg-gray-800 {
 	--tw-bg-opacity: 1;
@@ -1026,13 +1028,17 @@ video {
 .p-2 {
 	padding: 0.5rem;
 }
-.py-8 {
-	padding-top: 2rem;
-	padding-bottom: 2rem;
+.py-4 {
+	padding-top: 1rem;
+	padding-bottom: 1rem;
 }
 .px-4 {
 	padding-left: 1rem;
 	padding-right: 1rem;
+}
+.py-8 {
+	padding-top: 2rem;
+	padding-bottom: 2rem;
 }
 .py-2 {
 	padding-top: 0.5rem;
@@ -1049,10 +1055,6 @@ video {
 .px-2 {
 	padding-left: 0.5rem;
 	padding-right: 0.5rem;
-}
-.py-4 {
-	padding-top: 1rem;
-	padding-bottom: 1rem;
 }
 .px-3 {
 	padding-left: 0.75rem;
@@ -1128,10 +1130,6 @@ video {
 	font-size: 1.5rem;
 	line-height: 2rem;
 }
-.text-3xl {
-	font-size: 1.875rem;
-	line-height: 2.25rem;
-}
 .text-8xl {
 	font-size: 6rem;
 	line-height: 1;
@@ -1146,6 +1144,9 @@ video {
 .font-bold {
 	font-weight: 700;
 }
+.leading-relaxed {
+	line-height: 1.625;
+}
 .leading-normal {
 	line-height: 1.5;
 }
@@ -1156,17 +1157,13 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
-.text-\[\#00feda\] {
+.text-gray-200 {
 	--tw-text-opacity: 1;
-	color: rgba(0, 254, 218, var(--tw-text-opacity));
+	color: rgba(229, 231, 235, var(--tw-text-opacity));
 }
 .text-gray-100 {
 	--tw-text-opacity: 1;
 	color: rgba(243, 244, 246, var(--tw-text-opacity));
-}
-.text-gray-200 {
-	--tw-text-opacity: 1;
-	color: rgba(229, 231, 235, var(--tw-text-opacity));
 }
 .text-black {
 	--tw-text-opacity: 1;
@@ -1327,6 +1324,14 @@ video {
 		right: 10%;
 	}
 
+	.lg\:order-1 {
+		order: 1;
+	}
+
+	.lg\:order-2 {
+		order: 2;
+	}
+
 	.lg\:col-span-2 {
 		grid-column: span 2 / span 2;
 	}
@@ -1353,8 +1358,8 @@ video {
 		margin-left: 5rem;
 	}
 
-	.lg\:ml-4 {
-		margin-left: 1rem;
+	.lg\:ml-24 {
+		margin-left: 6rem;
 	}
 
 	.lg\:hidden {
@@ -1445,6 +1450,11 @@ video {
 
 	.xl\:grid-cols-4 {
 		grid-template-columns: repeat(4, minmax(0, 1fr));
+	}
+
+	.xl\:px-8 {
+		padding-left: 2rem;
+		padding-right: 2rem;
 	}
 }
 
